--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html><head><meta charset="utf-8"><base href="./"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"><link rel="icon" href="./favicon.ico" type="image/x-icon"><link href="./assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/><link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet"/><script src="https://kit.fontawesome.com/45d7fa8a7f.js" crossorigin="anonymous"></script><link href="styles.b6eea6b2dce3152b4dc7.bundle.css" rel="stylesheet"/></head><body><app-root>Loading...</app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.69b550d5c6f46f594b79.bundle.js"></script><script type="text/javascript" src="main.ae7da19809fcf64231d9.bundle.js"></script></body></html>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <base href="./">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link href="./assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/45d7fa8a7f.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.e7a199aa12e954e14102.css"></head>
+<body class="mat-typography">
+  	<app-root>Loading...</app-root>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.e4776e056724021584bc.js" nomodule defer></script><script src="polyfills-es2015.c241dff4b526dc8a7dc0.js" type="module"></script><script src="main-es2015.62015138a062d4868da1.js" type="module"></script><script src="main-es5.62015138a062d4868da1.js" nomodule defer></script></body>
+</html>
