--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/45d7fa8a7f.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
-  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
-  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+  <link rel="stylesheet" type="text/css" href="./node_modules/primeicons/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="./node_modules/primeng/resources/themes/nova-light/theme.css" />
+  <link rel="stylesheet" type="text/css" href="./node_modules/primeng/resources/primeng.min.css" />
 
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.e7a199aa12e954e14102.css"></head>
+<link rel="stylesheet" href="styles.d33419c78b68e1f8ef4a.css"></head>
 <body class="mat-typography">
   	<app-root>Loading...</app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.e4776e056724021584bc.js" nomodule defer></script><script src="polyfills-es2015.c241dff4b526dc8a7dc0.js" type="module"></script><script src="main-es2015.62015138a062d4868da1.js" type="module"></script><script src="main-es5.62015138a062d4868da1.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.e4776e056724021584bc.js" nomodule defer></script><script src="polyfills-es2015.c241dff4b526dc8a7dc0.js" type="module"></script><script src="main-es2015.b33253746a1976eabd50.js" type="module"></script><script src="main-es5.b33253746a1976eabd50.js" nomodule defer></script></body>
 </html>
